--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
     "@ionic/pro": "2.0.4",
+    "cordova-plugin-file": "6.0.1",
     "core-js": "^2.5.4",
     "dronetracer": "git+https://github.com/THE-WYE/DroneTracer.git",
     "rxjs": "~6.3.3",
@@ -56,5 +58,10 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-file": {}
+    }
+  }
 }
